--- a/package.json
+++ b/package.json
@@ -7,19 +7,50 @@
     "build": "next build --turbopack",
     "start": "next start",
     "export": "next build && next export",
-    "deploy": "npm run build && touch out/.nojekyll"
+    "deploy": "npm run build && touch out/.nojekyll",
+    "db:setup": "node scripts/setup-db.js",
+    "db:seed": "node prisma/seed.js",
+    "db:studio": "npx prisma studio"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@ant-design/icons": "5.x",
+    "@ant-design/x": "^1.6.1",
+    "@prisma/client": "^6.16.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@types/lodash": "^4.17.20",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@visactor/react-vchart": "^2.0.5",
+    "@visactor/vmind": "^2.0.10",
+    "@xyflow/react": "^12.8.4",
+    "abortcontroller-polyfill": "^1.7.8",
+    "ahooks": "^3.9.5",
+    "antd": "^5.27.3",
+    "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.542.0",
+    "next": "15.5.2",
+    "next-connect": "^1.0.0",
+    "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "sql-formatter": "^15.6.9",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "shadcn": "^3.2.1",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.8",
+    "typescript": "^5"
   }
 }
