--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "npx prisma generate && next build --turbopack",
+    "build:github-pages": "GITHUB_PAGES=true next build --turbopack",
+    "build:vercel": "next build --turbopack",
     "start": "next start",
     "export": "next build && next export",
     "deploy": "npm run build && touch out/.nojekyll",
