--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "deploy": "npm run build && touch out/.nojekyll",
     "db:setup": "node scripts/setup-db.js",
     "db:seed": "node prisma/seed.js",
-    "db:studio": "npx prisma studio"
+    "db:studio": "npx prisma studio",
+    "storybook": "storybook dev -p 6006"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -20,6 +21,7 @@
   "dependencies": {
     "@ant-design/icons": "5.x",
     "@ant-design/x": "^1.6.1",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/lodash": "^4.17.20",
@@ -33,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
     "lodash": "^4.17.21",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
@@ -40,12 +43,17 @@
     "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.6",
     "sql-formatter": "^15.6.9",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-webpack5": "^8.6.14",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
